Add build number selection

--- a/src/main/webapp/workspaceGlob.html
+++ b/src/main/webapp/workspaceGlob.html
@@ -4,4 +4,10 @@
    See <a href='http://ant.apache.org/manual/CoreTypes/fileset.html'>
    the @includes of Ant fileset</a> for the exact format.
    The base directory is <a href='ws/'>the workspace</a>.</p>
+   <p>Option <b>Specific build number</b> was added to be able to select an specific workspace to restore.</p>
+   <p>
+     <ul>
+       <li><b>Build Number</b>: Is the build number of the job that store the workkspaces to be restored. It will only be used when <b>Specific build number</b> is selected.</li>
+     </ul>
+   </p>
 </div>
